Revision history for Ocsinventory::Agent

       * Add a new configuration option for SSL certificate check in MacOSX agent installer
       * Add new screen codes for edid
       * Fix Bug ##1117110 Missing number of CPU socket
       * Add availibility to reforce a package deployment
       * Code rewrite in Common.pm to prevent sending empty XML tags to OCS server
       * Fix Bug #1086086 about uses of initialized value in Snmp.pm
       * Fix Bug #1087270 about zombie processes when running in daemon mode
       * Fix Bug #1086078 about use of initialized value
       * Fix Bug #1070788 about zip packages support
       * Fix Bug #1045356 about ifconfig parsing issue (Fedora >=17)
       * New availability to scan custom network with SNMP using a network address received from server 
       * Fix Bug #1049626 about Qemu virtualization not detected on proxmox
       * Fix Bug #1040197 about VLAN interface AIX support 
       * Add detect CPU architecture
       * AIX memory module change
       * Add many informations about CPU (l2cachesize, status, socket designation, cores number)
       * Fix Bug #882574 about parsing of dmidecode fails on SMBIOS warning
       * Fix Bug #984699 about the Output of 'ps' in VirtualBox module is displayed in stdout
       * Fix Bug #571655 about the Wrong Sys:Syslog usage
       * Retrieve family, serial number, number of processors, clockrate for BSDsystems
       * New module for inventoring Oracle databases
       * Multiples monitors patch added
       * Fix Bug #1023670 about memconf not working with HP-UX 11.31
       * New version of Gentoo.pm 
       * New Backend/Virtualization/Parallels.pm module for Parallels virtual machines inventory
       * Plugin Processes moved as module
       * Fix Bug #911492 about Freebsd Storage drives not being reported
       * Fix Bug #911491 about Freebsd CPU info not reporting properly
       * Fix Bug #873377 about Installed packages on Gentoo